fix height issues on mobile browsers

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -9,7 +9,8 @@ body {
 }
 
 html, body {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 *,
